<resources>
    <string name="app_name">JforMe</string>
    <string name="kakao_native_app_key">c6bc95c6bd4c7a27be300163b4f57427</string>
    <string name="kakao_rest_api_key">523fb37a69bc4d09d038442dc986c7e4</string>
    <string name="hello_blank_fragment">커뮤니티</string>
    <string name="cos">코스 선택</string>
    <string name="write_b">등록</string>
    <string name="photo">사진 추가</string>
    <string name="slash">/</string>
    <string name="wish">찜 목록</string>
    <string name="recentplace">최근 본 장소</string>
    <string name="like">좋아요</string>
    <string name="hate">싫어요</string>
    <string name="mypage">마이페이지</string>
    <string name="follow">팔로워</string>
    <string name="following">팔로잉</string>
    <string name="o">0</string>
    <string name="record">기록</string>
    <string name="myreview">후기</string>
    <string name="recommendplace">추천 장소</string>
    <string name="add">더보기</string>
    <string name="scope">4.5</string>
    <string name="all">5</string>
    <string name="np">34</string>
    <string name="participation">명 참여</string>
    <string name="placeaddress2">안산시</string>
    <string name="placeaddress3">상록구</string>
    <string name="placeaddress4">해양5로</string>
    <string name="placeaddress5">17</string>
    <string name="visitantreview">방문자 리뷰</string>
    <string name="nickname">닉네임</string>
    <string name="zip">일정.zip</string>
    <string name="makeschedule">일정 생성</string>
    <string name="schedule">일 정</string>
    <string name="hot">HOT</string>
    <string name="myround">내 주변</string>
    <string name="trip">관광지</string>
    <string name="festival">시즌</string>
    <string name="experience">체험</string>
    <string name="search">검색어를 입력하세요.</string>
    <string name="price">가격</string>
    <string name="notice">공지사항</string>
    <string name="review">리뷰</string>
    <string name="round">주변</string>
    <string name="festivalschedule">축제 일정</string>
    <string name="festivalfood">푸드트럭</string>
    <string name="festivalbooth">축제 부스</string>
    <string name="community">커뮤니티</string>
    <string name="food">식당</string>
    <string name="cafe">카페</string>
    <string name="jme">제이미의 제안</string>
    <string name="save">저장</string>
    <string name="lookcos">코스 보기</string>
    <string name="setting">설정</string>

    <!--메인페이지-Hot-->
    <string name="mainItem01">조천변벚꽃길</string>
    <string name="mainItem02">밀마루전망대</string>
    <string name="mainItem03">미래엔교과서박물관</string>
    <string name="mainItem04">충청남도산림박물관</string>
    <string name="mainItem05">세종시립민속박물관</string>
    <string name="mainItem06">소피아갤러리</string>
    <string name="mainItem07">BRT작은미술관</string>
    <string name="mainItem08">진성민속촌</string>
    <string name="mainItem09">김종서장군묘</string>
    <string name="mainItem10">아띠쥬</string>
</resources>