<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="communityViewModel"
            type="com.dodoojuice.jforme.community.CommunityWriteViewModel" />
    </data>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".community.CommunityWriteActivity">

        <ImageView
            android:id="@+id/line"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:background="@drawable/tittleback"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/hello_blank_fragment"
            android:textColor="@color/white"
            android:fontFamily="@font/font"
            android:textSize="25sp"/>


        <Button
            android:id="@+id/wrtieButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/jpc"
            android:fontFamily="@font/font_pre"
            android:text="@string/write_b"
            android:textSize="15dp"/>


        <ImageButton
            android:id="@+id/cosBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@id/line"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/plus"
            />

        <TextView
            android:id="@+id/cosText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line"
            android:layout_toEndOf="@id/cosBtn"
            android:layout_marginTop="35dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/font_pre"
            android:text="@string/cos"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cosText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/title_size"
            android:hint="제목을 입력하세요."
            android:paddingLeft="15dp"
            android:maxLength="15"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/jpc"
            android:src="@drawable/ic_back"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:alpha="0.2"
            style="@style/Widget.MaterialComponents.FloatingActionButton"/>



    </RelativeLayout>
</layout>